# blog-app

./: Dockerfile  Makefile  README.md  app.py  generate.py  pyproject.toml  requirements.txt
blogapp/: __init__.py  config.py  models.py
blogapp/main/: routes.py
blogapp/posts/: routes.py
blogapp/templates/: about.html  layout.html
blogapp/users/: forms.py  routes.py  utils.py
