[tool.poetry]
name = "blog-app"
version = "0.1.0"
description = "A blog app made using flask"
authors = ["Omnath Mandal <omnathmandal2003@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blogapp"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-wtf = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
email-validator = "^1.3.0"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.2"
flask-mail = "^0.9.1"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
